Changed name of the project from crossword_first_attempt for crossword

--- a/Crossword_first_attempt/.project
+++ b/Crossword_first_attempt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Crossword_first_attempt</name>
+	<name>Crossword</name>
 	<comment></comment>
 	<projects>
 	</projects>
